--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>My First HTML document</title>
+</head>
+<body>
+    <!-- This is my first html trial. I will improve the code -->
+</body>
+</html>
