--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>My First HTML document</title>
+    <title>My Site Title</title>
 </head>
 <body>
     <!-- This is my first html trial. I will improve the code -->
